# ws_stm32g030c6t6

./: .gitignore  stm32g030c6t6_cube_io.code-workspace
_api_pc/extern_io/: CompileAndLink.bat
_api_pc/extern_io/src/: main.cpp
_api_pc/hx711_cmake/: CMakeLists copy.txt  CMakeLists.txt
_api_pc/hx711_cmake/src/: main.cpp
_api_pc/hx711_cmake/src/core/: core.cpp
_api_pc/hx711_cmake/src/core/ap/: ap_def.hpp
_api_pc/hx711_cmake/src/core/common/_inc_hw/: uart.hpp
_api_pc/hx711_cmake/src/core/common/util/: sequence_terminal.hpp
_api_pc/hx711_cmake/src/core/hw/: hw.hpp
_api_pc/hx711_cmake/src/core/sys/: sys.cpp  sys_error.hpp
_api_pc/hx711_ctrl/: CompileAndLink.bat  main.cpp
_api_pc/hx711_ctrl/core/: core.cpp  core.hpp
_api_pc/hx711_ctrl/mcc_lib/: mcc_conversion.hpp
_api_pc/hx711_ctrl/src/: main.cpp
_api_pc/tool_io_cpp_class/: .clang-format  build.txt  def.hpp  vscodeTips.md
_api_pc/tool_io_cpp_class/cli/: mcc_cli.hpp
_api_pc/tool_io_cpp_class/hw/: net_comm.hpp  serial_comm.hpp
_api_pc/tool_io_cpp_class/json/: mcc_json.hpp
_api_pc/tool_io_cpp_class/pXY/: cnAuto.hpp  enOp.hpp  fm_pXY.hpp  main.cpp
_api_pc/tool_io_cpp_class/tool_sys/: io_tool.hpp  main.cpp  module_tool.hpp
_api_pc/vs2022_mfc_app/: vs2022_mfc_app.sln
_api_pc/vs2022_mfc_app/ctrl_hx711/: Resource.h  ctrl_hx711.cpp  ctrl_hx711.h  ctrl_hx711.vcxproj  ctrl_hx711.vcxproj.filters  ctrl_hx711Dlg.cpp  ctrl_hx711Dlg.h  ctrlhx711.rc
stm32g030c6t6_FastSysBootloader/: .mxproject  STM32G030C6TX_FLASH.ld  memo_fsbl.txt  stm32g030c6t6_FastSysBootloader.ioc
stm32g030c6t6_FastSysBootloader/App/: ap.c  ap.h
stm32g030c6t6_FastSysBootloader/App/include/: utils.h
stm32g030c6t6_FastSysBootloader/App/src/: button.c  wdg.c
stm32g030c6t6_FastSysBootloader/Core/Inc/: main.h  stm32g0xx_hal_conf.h
stm32g030c6t6_FastSysBootloader/Core/Src/: main.c
stm32g030c6t6_FastSysBootloader/Core/Startup/: startup_stm32g030c6tx.s
stm32g030c6t6_cube_io/: .cproject  .mxproject  .project  CMakeLists.txt  stm32g030c6t6_cube_io.ioc  stm32g030c6t6_cube_io.launch
stm32g030c6t6_cube_io/App/ap/: ap.cpp  ap.hpp
stm32g030c6t6_cube_io/App/hw/: hw.c  hw.h
stm32g030c6t6_cube_io/Core/Inc/: main.h  stm32g0xx_it.h
stm32g030c6t6_cube_io/Core/Src/: main.c  main.cpp  stm32g0xx_hal_msp.c  stm32g0xx_it.c
stm32g030c6t6_cube_io/lib/rtos/: FreeRTOSConfig.h
stm32g030c6t6_cube_io_osc/: .cproject  .mxproject  .project  stm32g030c6t6_cube_io_osc.ioc
stm32g030c6t6_cube_io_osc/App/ap/: ap.cpp  ap.hpp
stm32g030c6t6_cube_io_osc/App/bsp/: bsp.c
stm32g030c6t6_cube_io_osc/App/common/: def.h
stm32g030c6t6_cube_io_osc/App/hw/: hw.c  hw.h  hw_def.h
stm32g030c6t6_cube_io_osc/Core/Inc/: main.h
stm32g030c6t6_cube_io_osc/Core/Src/: main.c  main.cpp  stm32g0xx_hal_msp.c
stm32g030c6t6_exio_fw/: CMakeLists.txt  stm32g030c6t6_exio_fw.ioc
stm32g030c6t6_exio_fw/App/ap/: ap.cpp  ap.hpp  ap_def.hpp
stm32g030c6t6_exio_fw/App/exhw/: exhw.c
stm32g030c6t6_exio_fw/App/hw/: hw_def.h
stm32g030c6t6_exio_fw/Core/Inc/: main.h  stm32g0xx_it.h
stm32g030c6t6_exio_v12_fw/: CMakeLists.txt  stm32g030c6t6_exio_v12_fw.ioc
stm32g030c6t6_ext_ctrl/: CMakeLists.txt  STM32G030C6TX_FLASH.ld  stm32g030c6t6_ext_ctrl.ioc
stm32g030c6t6_ext_ope/: .mxproject  CMakeLists.txt  memo.txt  stm32g030c6t6_ext_ope.ioc
stm32g030c6t6_id_hx744/: .clang-format  CMakeLists.txt  memo.mymemo  stm32g030c6t6_id_hx744.ioc
stm32g030c6t6_id_hx744/App/ap/: ap.cpp  ap.hpp
stm32g030c6t6_id_hx744/App/ap/_inc/: ap_io.hpp  api_cmd.hpp  cnMotors.hpp  enLoadCell.hpp  enOp.hpp
stm32g030c6t6_id_hx744/App/common/inc_exhw/: hx711.h  iicomm_dev.h
stm32g030c6t6_id_hx744/App/exhw/: exhw.h
stm32g030c6t6_id_hx744/App/exhw/driver/: hx711.c
stm32g030c6t6_id_hx744/App/hw/: hw.h
stm32g030c6t6_id_hx744/App/hw/driver/: uart.c
stm32g030c6t6_id_hx744/Core/Inc/: main.h
stm32g030c6t6_id_hx744/Core/Src/: main.c  main.cpp  stm32g0xx_hal_msp.c
stm32g030c6t6_id_hx744_test/: CMakeLists.txt  stm32g030c6t6_id_hx744_test.ioc
stm32g030c6t6_jLext_ctrl_v0_0/: .mxproject  CMakeLists.txt  stm32g030c6t6_jLext_ctrl_v0_0.ioc
stm32g030c6t6_tool_fw/: .mxproject  CMakeLists.txt  STM32G030C6TX_FLASH.ld  stm32g030c6t6_tool_fw.ioc
test/: test.ioc
(+271 files in other folders)
